// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileHeader> should highlight settings tab if settings page is selected 1`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1>
      My SETTINGS
    </h1>
  </header>
  <div
    className="profile-box mt-n4"
  >
    <div
      className="d-inline-block relative profile-img-cover overlay"
    >
      <span
        className="spinner-border text-light align-middle"
      />
      <img
        alt="johnny"
        className="img-thumbnail"
        src="http://linktoimage.jpg"
      />
    </div>
    <div
      className="profile-wrapper"
    >
      <h4
        className="profile-name text-capitalize"
      >
        John
         
        Doe
      </h4>
      <p
        className="profile-username"
      >
        @johnny
      </p>
    </div>
    <div
      className="profile-footer"
    >
      <Link
        className="btn false"
        replace={false}
        to="dashboard"
      >
        <span
          className="relative"
        >
          Dashboard
        </span>
      </Link>
      <Link
        className="btn false"
        replace={false}
        to="profile"
      >
        <span
          className="relative"
        >
          Edit profile
        </span>
      </Link>
      <Link
        className="btn active"
        replace={false}
        to="settings"
      >
        <span
          className="relative"
        >
          Settings
        </span>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`<ProfileHeader> should render upload image button on edit profile page 1`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1>
      My PROFILE
    </h1>
  </header>
  <div
    className="profile-box mt-n4"
  >
    <div
      className="d-inline-block relative profile-img-cover"
    >
      <span
        className="spinner-border text-light align-middle"
      />
      <img
        alt="johnny"
        className="img-thumbnail"
        src="http://linktoimage.jpg"
      />
      <button
        className="btn change-image transition"
        onClick={[MockFunction]}
        type="button"
      >
        <i
          className="fas fa-camera"
        />
      </button>
    </div>
    <div
      className="profile-wrapper"
    >
      <h4
        className="profile-name text-capitalize"
      >
        John
         
        Doe
      </h4>
      <p
        className="profile-username"
      >
        @johnny
      </p>
    </div>
    <div
      className="profile-footer"
    >
      <Link
        className="btn false"
        replace={false}
        to="dashboard"
      >
        <span
          className="relative"
        >
          Dashboard
        </span>
      </Link>
      <Link
        className="btn active"
        replace={false}
        to="profile"
      >
        <span
          className="relative"
        >
          Edit profile
        </span>
      </Link>
      <Link
        className="btn false"
        replace={false}
        to="settings"
      >
        <span
          className="relative"
        >
          Settings
        </span>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`<ProfileHeader> should render without crashing 1`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1>
      My DASHBOARD
    </h1>
  </header>
  <div
    className="profile-box mt-n4"
  >
    <div
      className="d-inline-block relative profile-img-cover overlay"
    >
      <span
        className="spinner-border text-light align-middle"
      />
      <img
        alt="johnny"
        className="img-thumbnail"
        src="http://linktoimage.jpg"
      />
    </div>
    <div
      className="profile-wrapper"
    >
      <h4
        className="profile-name text-capitalize"
      >
        John
         
        Doe
      </h4>
      <p
        className="profile-username"
      >
        @johnny
      </p>
    </div>
    <div
      className="profile-footer"
    >
      <Link
        className="btn active"
        replace={false}
        to="dashboard"
      >
        <span
          className="relative"
        >
          Dashboard
        </span>
      </Link>
      <Link
        className="btn false"
        replace={false}
        to="profile"
      >
        <span
          className="relative"
        >
          Edit profile
        </span>
      </Link>
      <Link
        className="btn false"
        replace={false}
        to="settings"
      >
        <span
          className="relative"
        >
          Settings
        </span>
      </Link>
    </div>
  </div>
</Fragment>
`;
